# gmcl_rekinect

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yml
gmcl_rekinect/: Cargo.toml  build.rs
gmcl_rekinect/src/: api.rs  cusercmd.cpp  cusercmd.hpp  cusercmd.rs  exbones.lua  exbones.rs  hax.rs  lib.rs  logging.rs  rekinect.rs
kinect/: Cargo.toml
kinect-libfreenect/: Cargo.toml  build.rs
kinect-v1/: Cargo.toml  build.rs
kinect-v1/src/: gm_kinect_v1.cpp  gm_kinect_v1.hpp  lib.rs
kinect-winsdk-v1/: Cargo.toml  build.rs
kinect-winsdk-v1/src/: kinect_winsdk_v1.cpp  kinect_winsdk_v1.hpp  lib.rs
kinect-winsdk-v2/: Cargo.toml  build.rs
kinect-winsdk-v2/src/: kinect_winsdk_v2.cpp  kinect_winsdk_v2.hpp  lib.rs
kinect/src/: lib.rs  main.rs
rekinector/: Cargo.toml
rekinector/src/: main.rs  windows.rs
src/: api.rs  glua.cpp  glua.hpp  hax.cpp  hax.hpp  hax.rs  lib.rs
