[package]
name = "gm_rekinect"
version = "0.1.0"
edition = "2021"
authors = ["William Venner <william@venner.io>"]
publish = false

[workspace]
members = ["kinect", "kinect-libfreenect", "kinect-winsdk-v1"]

[lib]
crate-type = ["cdylib"]

[dependencies]
gmod = "17"
memmap = "0.7"
kinect = { path = "kinect" }
