[package]
name = "rekinect_winsdk_v1"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[target.'cfg(windows)'.dependencies]
log = "0.4"
kinect = { path = "../kinect" }
windows = { version = "0.52", features = [
	"Win32_Foundation",
	"Win32_UI",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_Threading",
	"Win32_System",
] }

[build-dependencies]
cc = "1"
build_cfg = "1"
